저작권 문제로 일부 수정 및 사이즈 재조정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
         <activity android:name=".bapact"/>
         <activity android:name=".InfoLoader"/>
         <activity android:name=".diloader"/>
+        <activity android:name=".Browser"/>
+        <activity android:name=".SplashActivity" />
     </application>
 
 </manifest>
