--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.kablesoft.cheongsu"
         minSdkVersion 16
         targetSdkVersion 22
-        versionCode 1
-        versionName "CCSH_APP_OPENSOURCE_CCG"
+        versionCode 2
+        versionName "CCSH_APPLICATION"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -31,17 +31,23 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.2.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
-    testCompile 'junit:junit:4.12'
     compile files('libs/android_meal_library.jar')
-    compile 'com.android.support:cardview-v7:25.3.0'
-    compile 'com.android.support:gridlayout-v7:25.3.0'
-    compile 'com.android.support:recyclerview-v7:25.3.0'
-    compile 'com.android.support:design:25.3.0'
     compile files('libs/jericho-html-3.4.jar')
     compile files('libs/commons-codec-1.9.jar')
     compile files('libs/commons-logging-1.2.jar')
     compile files('libs/httpclient-4.5.3.jar')
     compile files('libs/httpcore-4.4.6.jar')
+    compile 'com.android.support:appcompat-v7:25.2.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
+    compile 'com.android.support:cardview-v7:25.3.0'
+    compile 'com.android.support:gridlayout-v7:25.3.0'
+    compile 'com.android.support:recyclerview-v7:25.3.0'
+    compile 'com.android.support:design:25.3.0'
+    compile 'com.google.firebase:firebase-ads:10.0.1'
+    compile 'com.google.firebase:firebase-messaging:10.0.1'
+    testCompile 'junit:junit:4.12'
 }
+
+
+
+apply plugin: 'com.google.gms.google-services'
